renamed significantPlace to Place